added data background

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -12,6 +12,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Project Aim"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Credit card companies want to be able to protect their clients by detecting fraudulent credit card transactions.  It should also be noted that being able to detect fraud in a timely manner is beneficial.\n",
+    "Lastly being too cautiious is not practical and would frustrate clients"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Background"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The datasets contains transactions made by credit cards in **September 2013** by European cardholders. \n",
+    "\n",
+    "The dataset presents transactions that occurred in two days and is **highly imbalanced**.\n",
+    "* We have **492 frauds** out of **284,807 transactions**.\n",
+    "* The positive class (frauds) account for **0.172%** of all transactions.\n",
+    "\n",
+    "The dataset contains only numerical input variables which are the result of a **PCA transformation**.\n",
+    "* Due to confidentiality issues, there are not provided the original features and more background information about the data.\n",
+    "* Features V1, V2, ... V28 are the principal components obtained with PCA;\n",
+    "\n",
+    "The only features which have not been transformed with PCA are **Time** and **Amount**. \n",
+    "* Feature **Time** contains the seconds elapsed between each transaction and the first transaction in the dataset. \n",
+    "* Feature **Amount** is the transaction Amount, this feature can be used for example-dependant cost-senstive learning.\n",
+    "* Feature **Class** is the response variable and it takes value 1 in case of fraud and 0 otherwise."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Library Imports"
    ]
   },
