write up and code for SMOTE added

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -54,6 +54,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Project Outine"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Import Data\n",
+    "* Explore Data\n",
+    "    * Distribution of Class\n",
+    "    * Distribution of Amount\n",
+    "    * Distribution of observations over Time\n",
+    "        * Distribution of fraud observations over Time\n",
+    "* Clean \n",
+    "    * NA Values\n",
+    "    * Duplicate Rows\n",
+    "* Save new clean_df\n",
+    "\n",
+    "* Scale, T:t, SMOTE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
     "# Library Imports"
    ]
   },
@@ -64,7 +91,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-22T15:16:01.018319Z",
      "start_time": "2020-07-22T15:15:58.457576Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -905,7 +933,7 @@
     "below_amount = 110\n",
     "frauds_zoom = df['Amount'][(df['Class']==1) & (df['Amount']<=below_amount)]\n",
     "ax = sns.distplot(frauds_zoom, \n",
-    "                  bins=50, \n",
+    "                  bins=below_amount, \n",
     "                  kde=False, \n",
     "                  color='navy');\n",
     "ax.set_title('Distribution of Fraud Amount below {}\\n'.format(below_amount));\n",
@@ -948,7 +976,7 @@
     "below_amount = 10\n",
     "frauds_zoom = df['Amount'][(df['Class']==1) & (df['Amount']<=below_amount)]\n",
     "ax = sns.distplot(frauds_zoom, \n",
-    "                  bins=50, \n",
+    "                  bins=below_amount, \n",
     "                  kde=False, \n",
     "                  color='navy');\n",
     "ax.set_title('Distribution of Fraud Amount below {}\\n'.format(below_amount));\n",
