created functino for pipeline and gridsearch

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "Still to do:\n",
-    "* Improve Data Exploration Visuals"
+    "* Improve Data Exploration Visuals\n",
+    "* fix scaling of test data\n",
+    "* add in that we should be focusing on median, due to skewed data"
    ]
   },
   {
@@ -84,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-24T18:23:19.283830Z",
-     "start_time": "2020-07-24T18:23:19.223937Z"
+     "end_time": "2020-07-27T20:41:09.581623Z",
+     "start_time": "2020-07-27T20:41:08.531718Z"
     }
    },
    "outputs": [],
@@ -111,18 +113,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Data Import & Exploration"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Data Information:\n",
     "* Apart from Time, Amount and Class, the features have all gone through a PCA transformation.\n",
@@ -131,9 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Exploration Summary:\n",
     "* The data is heavily imbalanced, with only 0.017% of observations being frauds\n",
@@ -142,13 +138,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-24T17:38:39.517494Z",
-     "start_time": "2020-07-24T17:38:37.087012Z"
+     "end_time": "2020-07-27T20:41:11.960218Z",
+     "start_time": "2020-07-27T20:41:09.591263Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -293,7 +288,7 @@
        "[3 rows x 31 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,13 +300,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-24T17:38:39.523430Z",
-     "start_time": "2020-07-24T17:38:39.519691Z"
-    },
-    "hidden": true
+     "end_time": "2020-07-27T20:41:12.062162Z",
+     "start_time": "2020-07-27T20:41:12.058155Z"
+    }
    },
    "outputs": [
     {
@@ -324,7 +318,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,13 +329,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-24T17:38:39.528890Z",
-     "start_time": "2020-07-24T17:38:39.525492Z"
-    },
-    "hidden": true
+     "end_time": "2020-07-27T20:41:12.134980Z",
+     "start_time": "2020-07-27T20:41:12.130991Z"
+    }
    },
    "outputs": [
     {
@@ -350,7 +343,7 @@
        "(284807, 31)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,13 +354,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-27T20:42:04.180320Z",
+     "start_time": "2020-07-27T20:42:04.147374Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 284807 entries, 0 to 284806\n",
+      "Data columns (total 31 columns):\n",
+      "Time      284807 non-null float64\n",
+      "V1        284807 non-null float64\n",
+      "V2        284807 non-null float64\n",
+      "V3        284807 non-null float64\n",
+      "V4        284807 non-null float64\n",
+      "V5        284807 non-null float64\n",
+      "V6        284807 non-null float64\n",
+      "V7        284807 non-null float64\n",
+      "V8        284807 non-null float64\n",
+      "V9        284807 non-null float64\n",
+      "V10       284807 non-null float64\n",
+      "V11       284807 non-null float64\n",
+      "V12       284807 non-null float64\n",
+      "V13       284807 non-null float64\n",
+      "V14       284807 non-null float64\n",
+      "V15       284807 non-null float64\n",
+      "V16       284807 non-null float64\n",
+      "V17       284807 non-null float64\n",
+      "V18       284807 non-null float64\n",
+      "V19       284807 non-null float64\n",
+      "V20       284807 non-null float64\n",
+      "V21       284807 non-null float64\n",
+      "V22       284807 non-null float64\n",
+      "V23       284807 non-null float64\n",
+      "V24       284807 non-null float64\n",
+      "V25       284807 non-null float64\n",
+      "V26       284807 non-null float64\n",
+      "V27       284807 non-null float64\n",
+      "V28       284807 non-null float64\n",
+      "Amount    284807 non-null float64\n",
+      "Class     284807 non-null int64\n",
+      "dtypes: float64(30), int64(1)\n",
+      "memory usage: 69.5 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-07-24T17:38:39.860388Z",
      "start_time": "2020-07-24T17:38:39.530441Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -678,9 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Distribution of \"Class\" feature"
    ]
@@ -692,8 +739,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-24T17:38:39.872030Z",
      "start_time": "2020-07-24T17:38:39.861947Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -714,9 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* The classes are heavily imbalanced.\n",
     "* If we simply use this distribution of Classes for our predictive models, the models will overfit.  \n",
@@ -725,9 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Distribution of \"Amount\" feature"
    ]
@@ -739,8 +781,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-24T17:38:39.877726Z",
      "start_time": "2020-07-24T17:38:39.873578Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -766,7 +807,6 @@
      "end_time": "2020-07-24T17:38:40.336306Z",
      "start_time": "2020-07-24T17:38:39.880976Z"
     },
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -837,18 +877,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* The \"Amount\" feature is heavily skewed, with only 0.03% of transactions above 500"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Distribution of \"Amount\" feature for fraudulent transactions"
    ]
@@ -861,7 +897,6 @@
      "end_time": "2020-07-24T17:38:40.727887Z",
      "start_time": "2020-07-24T17:38:40.338934Z"
     },
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -919,9 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* We can clearly see that the amount for fraud transaction are mostly below 500  \n",
     "    * A closer inspection could show more detail on the most common ammounts"
@@ -930,8 +963,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "#### Distribution of \"Amount\" feature for fraudulent transactions < 110"
@@ -976,8 +1008,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "#### Distribution of \"Amount\" feature for fraudulent transactions < 10"
@@ -1031,9 +1062,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Distribution of observations over \"Time\""
    ]
@@ -1045,8 +1074,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-24T17:38:41.695188Z",
      "start_time": "2020-07-24T17:38:41.370242Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -1070,9 +1098,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* We know from the Data Background that the observations were taken over the course of 2 days.  \n",
     "* We can edit the \"Time\" for observations on day 2, to group the observations into 1 day. \n",
@@ -1086,8 +1112,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-24T17:38:41.816209Z",
      "start_time": "2020-07-24T17:38:41.697250Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -1129,8 +1154,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-24T17:38:41.863150Z",
      "start_time": "2020-07-24T17:38:41.819293Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -1159,8 +1183,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-24T17:38:41.932464Z",
      "start_time": "2020-07-24T17:38:41.864854Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1176,7 +1199,6 @@
      "end_time": "2020-07-24T17:38:42.476887Z",
      "start_time": "2020-07-24T17:38:41.934097Z"
     },
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1206,9 +1228,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### Distribution of fraud transactions over time"
    ]
@@ -1220,8 +1240,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-24T17:38:43.003153Z",
      "start_time": "2020-07-24T17:38:42.478892Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -1250,9 +1269,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Null Values"
    ]
@@ -1264,8 +1281,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-24T17:38:43.037284Z",
      "start_time": "2020-07-24T17:38:43.005209Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -1285,9 +1301,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* We can see there are no Null Values"
    ]
@@ -1779,8 +1793,7 @@
    "metadata": {},
    "source": [
     "## Scaling\n",
-    "Since most of our data has already been scaled we should scale the columns that are left to scale (Amount and Time)\n",
-    "from sklearn.\n",
+    "Since most of our data has already been scaled (through PCA) we should scale the columns that are left to scale (Amount and Time).\n",
     "\n",
     "If we do not scale, it will degrade the predictive performance of some machine learning models.  More precisely, unscaled data may either slow down or even prevent a convergence in a gradient-based estimating model (such as linear or logistic regression).\n",
     "\n",
