finished fitting models, added ROC, Conf Matrix and analysis of incorrect predictions

--- a/notebooks/smote_code_test.ipynb
+++ b/notebooks/smote_code_test.ipynb
@@ -1911,6 +1911,178 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-31T01:11:34.386652Z",
+     "start_time": "2020-07-31T01:11:33.689336Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-31T19:42:21.757121Z",
+     "start_time": "2020-07-31T19:42:21.748172Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    5\n",
+      "1    6\n",
+      "2    9\n",
+      "dtype: int64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   a  b  c\n",
+       "0  1  5  3\n",
+       "1  4  5  6\n",
+       "2  9  8  9"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(np.array([[1, 5, 3], [4, 5, 6], [9, 8, 9]]),columns=['a', 'b', 'c'])\n",
+    "print(df.max(axis=1))\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-31T19:41:36.179607Z",
+     "start_time": "2020-07-31T19:41:36.172001Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# df.loc[:,'a':'c'].max(axis=1).max()\n",
+    "df['Highest F1 Score'] = df[['a','b','c']].max(axis=1)\n",
+    "# frame[['test1','test2','test3']].max(axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-31T19:55:12.263641Z",
+     "start_time": "2020-07-31T19:55:12.258139Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-31T19:55:18.394605Z",
+     "start_time": "2020-07-31T19:55:18.388655Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The highest F1 score was 9\n",
+      "This was a result of resampling the data with (2, 'c'), and using the (2, 'a') classifier\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-31T19:49:25.896272Z",
+     "start_time": "2020-07-31T19:49:25.889355Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index positions of 9 in Dataframe : \n",
+      "Position  0  (Row index , Column Name) :  (2, 'a')\n",
+      "Position  1  (Row index , Column Name) :  (2, 'c')\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
