added folder for visuals, and save fig function for barplots

--- a/notebooks/predictive_modelling.ipynb
+++ b/notebooks/predictive_modelling.ipynb
@@ -2071,6 +2071,386 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-04T22:33:03.887514Z",
+     "start_time": "2020-08-04T22:33:00.639648Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_bill</th>\n",
+       "      <th>tip</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>day</th>\n",
+       "      <th>time</th>\n",
+       "      <th>size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>16.99</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>10.34</td>\n",
+       "      <td>1.66</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>21.01</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>23.68</td>\n",
+       "      <td>3.31</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>24.59</td>\n",
+       "      <td>3.61</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   total_bill   tip     sex smoker  day    time  size\n",
+       "0       16.99  1.01  Female     No  Sun  Dinner     2\n",
+       "1       10.34  1.66    Male     No  Sun  Dinner     3\n",
+       "2       21.01  3.50    Male     No  Sun  Dinner     3\n",
+       "3       23.68  3.31    Male     No  Sun  Dinner     2\n",
+       "4       24.59  3.61  Female     No  Sun  Dinner     4"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tips = sns.load_dataset(\"tips\")\n",
+    "tips.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-04T23:17:35.809390Z",
+     "start_time": "2020-08-04T23:17:35.800031Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Original</th>\n",
+       "      <th>SMOTE</th>\n",
+       "      <th>Undersampled</th>\n",
+       "      <th>SMOTE &amp; Undersampled</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Gaussian Naive Bayes</td>\n",
+       "      <td>0.117377</td>\n",
+       "      <td>0.103990</td>\n",
+       "      <td>0.072303</td>\n",
+       "      <td>0.104411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Random Forest</td>\n",
+       "      <td>0.892086</td>\n",
+       "      <td>0.876712</td>\n",
+       "      <td>0.097172</td>\n",
+       "      <td>0.776471</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>0.877698</td>\n",
+       "      <td>0.845161</td>\n",
+       "      <td>0.083359</td>\n",
+       "      <td>0.704301</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  index  Original     SMOTE  Undersampled  \\\n",
+       "1  Gaussian Naive Bayes  0.117377  0.103990      0.072303   \n",
+       "2         Random Forest  0.892086  0.876712      0.097172   \n",
+       "3               XGBoost  0.877698  0.845161      0.083359   \n",
+       "\n",
+       "   SMOTE & Undersampled  \n",
+       "1              0.104411  \n",
+       "2              0.776471  \n",
+       "3              0.704301  "
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = f1_scores_df.copy()\n",
+    "df = df.reset_index()\n",
+    "df = df.iloc[1:,:]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-05T00:57:36.161750Z",
+     "start_time": "2020-08-05T00:57:36.157811Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.indexes.base.Index"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(f1_scores_df.columns[-4:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-05T00:44:07.719261Z",
+     "start_time": "2020-08-05T00:44:07.708204Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Gaussian Naive Bayes</td>\n",
+       "      <td>Original</td>\n",
+       "      <td>0.117377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Random Forest</td>\n",
+       "      <td>Original</td>\n",
+       "      <td>0.892086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>Original</td>\n",
+       "      <td>0.877698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Gaussian Naive Bayes</td>\n",
+       "      <td>SMOTE</td>\n",
+       "      <td>0.103990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Random Forest</td>\n",
+       "      <td>SMOTE</td>\n",
+       "      <td>0.876712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>SMOTE</td>\n",
+       "      <td>0.845161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>Gaussian Naive Bayes</td>\n",
+       "      <td>Undersampled</td>\n",
+       "      <td>0.072303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>Random Forest</td>\n",
+       "      <td>Undersampled</td>\n",
+       "      <td>0.097172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>Undersampled</td>\n",
+       "      <td>0.083359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>Gaussian Naive Bayes</td>\n",
+       "      <td>SMOTE &amp; Undersampled</td>\n",
+       "      <td>0.104411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>Random Forest</td>\n",
+       "      <td>SMOTE &amp; Undersampled</td>\n",
+       "      <td>0.776471</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>SMOTE &amp; Undersampled</td>\n",
+       "      <td>0.704301</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   index              variable     value\n",
+       "0   Gaussian Naive Bayes              Original  0.117377\n",
+       "1          Random Forest              Original  0.892086\n",
+       "2                XGBoost              Original  0.877698\n",
+       "3   Gaussian Naive Bayes                 SMOTE  0.103990\n",
+       "4          Random Forest                 SMOTE  0.876712\n",
+       "5                XGBoost                 SMOTE  0.845161\n",
+       "6   Gaussian Naive Bayes          Undersampled  0.072303\n",
+       "7          Random Forest          Undersampled  0.097172\n",
+       "8                XGBoost          Undersampled  0.083359\n",
+       "9   Gaussian Naive Bayes  SMOTE & Undersampled  0.104411\n",
+       "10         Random Forest  SMOTE & Undersampled  0.776471\n",
+       "11               XGBoost  SMOTE & Undersampled  0.704301"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifiers = list(f1_scores_df.columns[-4:])\n",
+    "df = df.melt(id_vars=['index'], value_vars=classifiers)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.rename(columns={\"A\": \"a\","
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 225,
    "metadata": {
     "ExecuteTime": {
@@ -2091,11 +2471,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 261,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-05T01:21:07.522190Z",
-     "start_time": "2020-08-05T01:21:07.515670Z"
+     "end_time": "2020-08-05T01:29:36.467353Z",
+     "start_time": "2020-08-05T01:29:36.460638Z"
     }
    },
    "outputs": [],
@@ -2103,7 +2483,7 @@
     "def scores_bar_plot(df, metric, figsize=(15,10)):\n",
     "    '''takes a configured df and plots a barplot'''\n",
     "    \n",
-    "    plt.figure(figsize=figsize);\n",
+    "    f = plt.figure(figsize=figsize);\n",
     "    sns.set(font_scale=2, style='whitegrid');\n",
     "\n",
     "    sns.barplot(x = 'variable', y = 'value', hue = 'index', data=df, ci=None);\n",
@@ -2117,16 +2497,19 @@
     "    plt.hlines(y=df['value'].max(), xmin=-0.4, xmax=3.4, ls='--', lw=3, label='Highest {} Score: {}'.format(metric, high_score));\n",
     "    \n",
     "    # Put the legend out of the figure\n",
-    "    plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)"
+    "    plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
+    "    \n",
+    "    # Save figure\n",
+    "    f.savefig('../barplot_of_{}_scores.pdf'.format(metric.lower()), bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 266,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-05T01:21:08.297780Z",
-     "start_time": "2020-08-05T01:21:07.888632Z"
+     "end_time": "2020-08-05T01:30:05.055150Z",
+     "start_time": "2020-08-05T01:30:04.518254Z"
     }
    },
    "outputs": [
@@ -2147,11 +2530,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 267,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-04T21:27:19.906596Z",
-     "start_time": "2020-08-04T21:27:19.901713Z"
+     "end_time": "2020-08-05T01:30:06.319644Z",
+     "start_time": "2020-08-05T01:30:06.315051Z"
     },
     "scrolled": true
    },
@@ -2171,11 +2554,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 268,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-05T01:21:08.837523Z",
-     "start_time": "2020-08-05T01:21:08.421534Z"
+     "end_time": "2020-08-05T01:30:07.114818Z",
+     "start_time": "2020-08-05T01:30:06.531084Z"
     },
     "scrolled": false
    },
@@ -2197,11 +2580,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 97,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-04T21:27:20.370243Z",
-     "start_time": "2020-08-04T21:27:20.365169Z"
+     "end_time": "2020-08-04T21:27:19.673344Z",
+     "start_time": "2020-08-04T21:27:19.667111Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Original</th>\n",
+       "      <th>SMOTE</th>\n",
+       "      <th>Undersampled</th>\n",
+       "      <th>SMOTE &amp; Undersampled</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>Baseline</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Gaussian Naive Bayes</td>\n",
+       "      <td>0.864865</td>\n",
+       "      <td>0.871622</td>\n",
+       "      <td>0.878378</td>\n",
+       "      <td>0.871622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Random Forest</td>\n",
+       "      <td>0.837838</td>\n",
+       "      <td>0.864865</td>\n",
+       "      <td>0.905405</td>\n",
+       "      <td>0.891892</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>0.824324</td>\n",
+       "      <td>0.885135</td>\n",
+       "      <td>0.932432</td>\n",
+       "      <td>0.885135</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Original     SMOTE  Undersampled  SMOTE & Undersampled\n",
+       "Baseline              0.000000  0.000000      0.000000              0.000000\n",
+       "Gaussian Naive Bayes  0.864865  0.871622      0.878378              0.871622\n",
+       "Random Forest         0.837838  0.864865      0.905405              0.891892\n",
+       "XGBoost               0.824324  0.885135      0.932432              0.885135"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall_scores_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-05T01:28:29.720105Z",
+     "start_time": "2020-08-05T01:28:29.715641Z"
     },
     "scrolled": true
    },
